unpackaged/main/default/objects/OpportunityGroupedProduct__c/OpportunityGroupedProduct__c.object-meta.xml
<CustomObject>
    <description>Opportunity Grouped Product from Opportunity Item Spit</description>
    <label>Opportunity Grouped Product</label>
    <nameField>
        <label>Opportunity Grouped Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Grouped Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>