unpackaged/main/default/objects/OpportunityGroupedProduct__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Grouped amount from Opportunity Item Split</inlineHelpText>
    <label>Product Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>