unpackaged/main/default/objects/OpportunityGroupedProduct__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>CASE(TEXT(Opportunity__r.Licence_Model__c), 
&#39;SaaS&#39;, Amount__c*(0.225+1/4),
&#39;SaaS Flip&#39;, Amount__c *(0.225+1/4),
 Amount__c * 0.225)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>