unpackaged/main/default/objects/OpportunityGroupedProduct__c/fields/AUD_Amount__c.field-meta.xml
<CustomField>
    <fullName>AUD_Amount__c</fullName>
    <description>Calculate Product Amount from Dated Conversion Rate</description>
    <inlineHelpText>Calculate Product Amount from Dated Conversion Rate</inlineHelpText>
    <label>AUD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>