unpackaged/main/default/objects/OpportunityGroupedProduct__c/fields/RM_Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>RM_Product_Amount__c</fullName>
    <formula>Amount__c * Opportunity__r.OO_ForecastPcnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Product Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>